# mcp-ai-wiki

./: .iwiki.toml  .iwikiignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: README.ru.md  TODO.md
docs/reports/: iwiki-mcp-server-report.html
docs/superpowers/plans/: 2026-06-30-concurrent-sync-and-iwikiignore.md  2026-06-30-iwiki-mcp-server.md  2026-07-01-delete-stale-wiki-page.md  2026-07-01-ensure-fresh-before-write.md  2026-07-01-wiki-update-page.md
docs/superpowers/reports/: concurrent-sync-and-iwikiignore-results.html  delete-stale-wiki-page-results.html  ensure-fresh-before-write-results.html  wiki-update-page-results.html
docs/superpowers/specs/: 2026-06-30-iwiki-mcp-server-design.md  (+4 more)
docs/wiki/: architecture.md  git-sync.md  installation.md  mcp-server.md
src/iwiki_mcp/: __init__.py  base.py  ignore.py  indexer.py  lock.py  resources.py  retrieval.py  server.py  sync.py
templates/: CLAUDE.md.snippet
tests/: test_base.py  test_commit_and_push.py  test_ensure_fresh.py  test_grep.py  test_indexer.py  test_indexer_log.py  test_iwikiignore.py  test_lock.py  test_mcp_smoke.py  test_resources.py  test_retrieval.py  test_section.py  test_server_fresh.py  test_server_iwikiignore.py  test_server_lint_sync.py  test_server_read.py  test_server_search.py  test_server_update.py  test_server_write.py  test_store_interface.py  test_sync.py  test_sync_concurrency.py
tests/engine/: test_chunk.py  test_config.py  test_config_decouple.py  test_embed.py  test_links.py  test_lint.py  test_related.py  test_search.py  test_store.py  test_validate.py
(+14 files in other folders)
